; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_dir.c_nilfs_prepare_chunk_uninterruptible.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_dir.c_nilfs_prepare_chunk_uninterruptible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.address_space = type { i32 }

@AOP_FLAG_UNINTERRUPTIBLE = common dso_local global i32 0, align 4
@nilfs_get_block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.page*, %struct.address_space*, i32, i32)* @nilfs_prepare_chunk_uninterruptible to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nilfs_prepare_chunk_uninterruptible(%struct.page* %0, %struct.address_space* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.page*, align 8
  %6 = alloca %struct.address_space*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.page* %0, %struct.page** %5, align 8
  store %struct.address_space* %1, %struct.address_space** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.page*, %struct.page** %5, align 8
  %11 = call i32 @page_offset(%struct.page* %10)
  %12 = load i32, i32* %7, align 4
  %13 = add i32 %11, %12
  store i32 %13, i32* %9, align 4
  %14 = load %struct.address_space*, %struct.address_space** %6, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %7, align 4
  %18 = sub i32 %16, %17
  %19 = load i32, i32* @AOP_FLAG_UNINTERRUPTIBLE, align 4
  %20 = load i32, i32* @nilfs_get_block, align 4
  %21 = call i32 @block_write_begin(i32* null, %struct.address_space* %14, i32 %15, i32 %18, i32 %19, %struct.page** %5, i32* null, i32 %20)
  ret i32 %21
}

declare dso_local i32 @page_offset(%struct.page*) #1

declare dso_local i32 @block_write_begin(i32*, %struct.address_space*, i32, i32, i32, %struct.page**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
